--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.1'
 services:
   scuttlebot:
-    image: bmordan/stmo
+    image: bmordan/ssb
     build: .
-    volumes:
-      - /Users/bernardmordan/.ssb:/root/.ssb
     ports:
       - 8080:8080
+    volumes:
+      - ${PWD}/src/.ssb:/usr/src/app/.ssb
