--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stmo",
+  "name": "ssb-med-log-001",
   "version": "0.1.0",
   "description": "ssb loging learnings",
   "main": "main.js",
